clang/test/BSC/Negative/NullabilityCheck/builtin_transfer_type_nullability.cbs
// RUN: %clang_cc1 -verify %s

_Safe int *get_raw(void);
_Safe int * _Owned _Nullable get_owned(void);
_Safe void consume(int *_Owned _Nullable);

_Safe void test_take_from_raw_preserves_nullable_type(void) {
  int *p = get_raw();
  int *_Owned _Nonnull q = __take_from_raw(p); // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
  consume(q);
}

_Safe void test_move_to_raw_preserves_nullable_type(void) {
  int *_Owned _Nullable p = get_owned();
  int * _Nonnull q = __move_to_raw(p); // expected-error {{nonnull pointer cannot be assigned by nullable pointer}}
  (void) q;
}

_Safe void test_hybrid_preserves_nullable_type(void) {
  int * _Owned _Nullable p = get_owned();
  int * _Owned _Nullable q = __take_from_raw(__move_to_raw(p));
  *q = 10; // expected-error {{nullable pointer cannot be dereferenced}}
}
